fix: table of contents overflowing x

--- a/src/scss/_components.table-of-contents.scss
+++ b/src/scss/_components.table-of-contents.scss
@@ -85,6 +85,7 @@
 
     @media (min-width: $bp-md) {
       padding-left: 1rem;
+      max-width: calc(100% - 1.5rem); // Prevent overflow from padding-left
     }
 
     &::before {
